# BreastCancerAtlasExtension

./: CITATION.cff  CMakeLists.txt  README.md
BreastCancerAtlas/: BreastCancerAtlas.py  CMakeLists.txt
BreastCancerAtlas/Resources/Icons/: Thumbs.db
BreastCancerAtlas/Resources/UI/: BreastCancerAtlas.ui
